guia para subir modificaciones al repositorio remoto

--- a/PRUEBAGIT/Prueba1.html
+++ b/PRUEBAGIT/Prueba1.html
@@ -1,2 +1,3 @@
 <h1> Mi primer archivo GIT </h1>
 <h2>Esta es la primer modificacion</h2>
+<h2>Primero se agrega el archivo con add y despues se hace el commit, siempre hay que ponerle algo y por ultimo el push</h2>
